--- a/japan.html
+++ b/japan.html
@@ -6,11 +6,15 @@
   <title>hello</title>
 </head>
 <body>
-  <h1 class="こんにちは、最後の問題です
+  <h1 class="
+こんにちは、最後の問題です
+             
 16.12.26.13.1.20.5
 24.34.19.1.19.16.36
 42.16.36.1.33.7.3
-37.48.16.28.2.24.47">
+37.48.16.28.2.24.47
+
+最初の1人を待ってます">
     15.15.61.34.42<br>
     61.32.11.02.51<br>
     41.02.34.23.11<br>
